--- a/views/room.ejs
+++ b/views/room.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link type="stylesheet" href="css/main.css" rel="stylesheet"/>
@@ -16,11 +17,26 @@
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="script.js" defer></script>
   <title>Video Call and Chat App</title>
+
+  <!--Inline CSS-->
   <style>
-    #video-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, 300px);
-      grid-auto-rows: 300px;
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      overflow: hidden;
+    }
+
+    #main #video-grid {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      height: 60px;
+      width: 90px;
+      z-index: 100;
+      margin: 0 10px 10px 0;
+      transition: 0.4s linear;
     }
     
     video {
@@ -28,54 +44,411 @@
       height: 100%;
       object-fit: cover;
     }
+    
+    #main {
+      display: inline-block;
+      position: relative;
+      background-color: rgb(51, 49, 49);
+      background-image: linear-gradient(to bottom, black , rgb(51, 49, 49));
+      width: 75%;
+      height: 100vh;
+      transition: width 0.4s linear;
+    }
+    
+    .icons1 {
+      list-style-type: none;
+      display: flex;
+      margin-top: 20px;
+    }
+
+    .icons2 {
+      list-style-type: none;
+      display: flex;
+      position: absolute;
+      justify-content: space-around;
+      bottom: 10px;
+      width: 400px;
+      margin-left: 30%;
+    }
+
+    i {
+      font-size: 25px;
+      margin-right: 30px;
+      color: white;
+    }
+
+    .circle-icon {
+      height: 55px;
+      width: 55px;
+      border-radius: 50px;
+      border-style: none;
+      background-color: black;
+    }
+
+    .circle-icon i {
+      font-size: 20px;
+      transform: translate(10px, 0);
+    }
+
+
+    .fa-microphone {
+      transform: translate(15.5px, 0) !important;
+    }
+
+    .fa-video {
+      transform: translate(11px, 0) !important;
+    }
+
+    .fa-bars {
+      margin-right: 60px;
+    }
+
+    .fa-phone-slash {
+      transform: translate(8px, 1px) !important;
+    }
+    
+    #sidebar {
+      position: absolute;
+      right: 0;
+      display: inline-block;
+      width: 25%;
+      height: 100vh;
+      transition: width 0.4s linear;
+    }
+
+    .options {
+      position: absolute;
+      bottom: 2px;
+      right: 0px;
+      height: 50px;
+      width: 100%;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .icons3 {
+      list-style-type: none;
+      display: flex;
+      height: 100%;
+      width: 100%;
+      padding-left: 0;
+    }
+
+    .icons3 li {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    #close {
+      background-color: rgb(180, 68, 130);
+      height: 70%;
+      margin-top: 10px;
+      opacity: 1;
+      border-bottom-left-radius: 40px;
+      border-top-left-radius: 40px;
+      position: absolute;
+      right: 0;
+    }
+
+    #close i {
+      color: white !important;
+      margin-top: 6px;
+    }
+
+    #close:hover {
+      opacity: 1;
+    }
+
+    #open {
+      display: none;
+      background-color: rgb(180, 68, 130);
+      height: 70%;
+      margin-top: 10px;
+      opacity: 1;
+      border-bottom-left-radius: 40px;
+      border-top-left-radius: 40px;
+      position: absolute;
+      right: 0;
+    }
+
+    #open i {
+      color: white !important;
+      margin-top: 6px;
+    }
+
+    #open:hover {
+      opacity: 1;
+    }
+
+    .options i {
+      color: black;
+      font-size: 20px;
+      margin-right: 50px;
+      transform: translate(24px,0);
+    }
+
+    .active-tab {
+      border-bottom: 4px solid rgb(180, 68, 130);
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .active-tab i {
+      color: pink;
+    }
+
+    .chat {
+      display: none;
+      height: 82vh;
+      overflow: auto;
+    }
+
+    .chat ol {
+      list-style-type: none;
+    }
+
+    .chat__sidebar {
+      height: 92.5vh;
+      overflow: auto;
+    }
+
+    .chat__sidebar ol {
+      list-style-type: none;
+    }
+
+    .message-header {
+      width: 100%;
+      padding: 10px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+      margin-bottom: 20px;
+    }
+
+    #users ol {
+      padding-left: 0;
+    }
+
+    #users li {
+      line-height: 30px;
+      width: 100%;
+      padding-left: 20px;
+    }
+
+    #users li:nth-child(odd){
+      background-color: rgba(165, 158, 158, 0.1);
+    }
+
+    #message-form {
+      display: flex;
+      justify-content: space-between;
+      padding: 0 10px;
+      margin-top: 20px;
+      position: fixed;
+      bottom: 60px;
+      width: 390px;
+      height: 60px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    }
+
+    #message-form input {
+      width: 80%;
+      border-style: none;
+      padding: 5px 6px;
+    }
+
+    input[type="text"], input[type="password"], textarea, select { 
+    outline: none;
+    }
+
+    #message-form button {
+      border-style: none;
+      background-color: white;
+    }
+
+    .chat__messages {
+      padding-left: 0;
+    }
+
+    .message {
+      padding: 0 10px;
+    }
+
+    .message__title {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
   </style>
+
 </head>
+
 <body>
-  <div id="video-grid"></div>
-  <button id="muteButton" type="button">Mute Audio</button>
-  <button id="videoButton" type="button">Toggle Video</button>
-  <button id="shareScreen" type="button">Share Screen</button>
-  <button id="endCall" type="button">End Call</button>
-
-  <div class="chat">
-    <div class="chat__sidebar">
-      <h3>People</h3>
-      <div id="users"></div>
-      </div>
-      <div class="chat__main">
-          <ol id="messages" class="chat__messages"></ol>
-          <div class="chat__footer">
-              <form id="message-form">
-                  <input name="message" type="text" placeholder="Message" autofocus autocomplete="off" />
-                  <button>Send</button>
-              </form>
-          </div>
-      </div>
-
-    <script id="message-template" type="text/template">
-      <li class="message">
-          <div class="message__title">
-              <h4>{{from}}</h4>
-              <span>{{createdAt}}</span>
-          </div>
-          <div class="message__body">
-              <p>{{text}}</p>
-          </div> 
-      </li> 
-    </script>
-
-    <script id="location-template" type="text/template">
-      <li class="message">
-          <div class="message__title">
-              <h4>{{from}}</h4>
-              <span>{{createdAt}}</span>
-          </div>
-          <div class="message__body">
-              <a href="{{url}}" target="_blank"><p>My Current Location</p></a>
-          </div> 
-      </li>
-    </script>
+  <div id="main">
+     <!--
+        <ul class="icons1">
+      <li><i class="fas fa-bars"></i></li>
+      <li><i class="fa fa-mouse-pointer"></i></li>
+      <li><i class="fa fa-hand-pointer"></i></li>
+      <li><i class="fas fa-pencil-alt"></i></li>
+      <li><i class="far fa-square"></i></li>
+      <li><i class="fas fa-text-width"></i></li>
+    </ul>
+  -->
+    <ul class="icons2">
+      <li><button id="muteButton" type="button" class="circle-icon">
+        <i id="mic" class="fas fa-microphone-slash "></i>
+      </button></li>
+      <li><button id="videoButton" type="button" class="circle-icon">
+        <i id="video" class="fas fa-video-slash "></i>
+      </button></li>
+      <li><button id="shareScreen" type="button" class="circle-icon">
+        <i class="fas fa-share-square "></i>
+      </button></li>
+      <li><button style="background-color: rgb(185, 13, 13);"  id="endCall" type="button" class="circle-icon">
+        <i class="fas fa-phone-slash"></i>
+      </button></li>
+    </ul>
+      
+    <div id="video-grid"></div>
+    
   </div>
+
+  <section id="sidebar">
+    <div class="chat__sidebar" id="chat__sidebar">
+      <div class="message-header">
+        <h4 style="font-weight: 700;">Attendees</h4>
+      </div>
+      <div id="users">
+      </div>
+    </div>
+
+    <div class="chat" id="chat">
+        <div class="chat__main">
+          <div class="message-header">
+            <h4 style="font-weight: 700;">Everyone</h4>
+          </div>
+            <ol id="messages" class="chat__messages"></ol>
+            <div class="chat__footer">
+                <form id="message-form">
+                    <input name="message" type="text" placeholder="Message" autofocus autocomplete="off" />
+                    <button><i style="color: black; transform: rotate(40deg);" class="far fa-paper-plane"></i></button>
+                </form>
+            </div>
+        </div>
+
+      <script id="message-template" type="text/template">
+        <li class="message">
+            <div class="message__title">
+                <h5 style="font-weight: 600;">{{from}}</h5>
+                <span>{{createdAt}}</span>
+            </div>
+            <div class="message__body">
+                <p>{{text}}</p>
+            </div> 
+        </li> 
+      </script>
+
+      <script id="location-template" type="text/template">
+        <li class="message">
+            <div class="message__title">
+                <h4>{{from}}</h4>
+                <span>{{createdAt}}</span>
+            </div>
+            <div class="message__body">
+                <a href="{{url}}" target="_blank"><p>My Current Location</p></a>
+            </div> 
+        </li>
+      </script>
+    </div>
+
+    <div class="options">
+      <ul class="icons3">
+        <li onclick="comment()" id="comment"><i class="far fa-comment-dots"></i></li>
+        <li onclick="user()" id="user" class="active-tab"><i class="fas fa-user-friends"></i></li>
+        <li onclick="settings()" id="settings"><i class="fas fa-cog"></i></li>
+        <li id="close"><i id="close-icon" class="fas fa-times"></i></li>
+        <li id="open"><i id="open-icon" class="fas fa-chevron-left"></i></li>
+      </ul>
+    </div>
+
+  </section>
+
+  <script>
+    function comment() {
+      document.getElementById("user").classList.remove("active-tab");
+      document.getElementById("settings").classList.remove("active-tab");
+      var element = document.getElementById("comment");
+      element.classList.add("active-tab");
+
+      document.getElementById("chat__sidebar").style.display = "none";
+      document.getElementById("chat").style.display = "block";
+    }
+
+    function user() {
+      document.getElementById("comment").classList.remove("active-tab");
+      document.getElementById("settings").classList.remove("active-tab");
+      var element = document.getElementById("user");
+      element.classList.add("active-tab");
+
+      document.getElementById("chat__sidebar").style.display = "block";
+      document.getElementById("chat").style.display = "none";
+    }
+
+    function settings() {
+      document.getElementById("user").classList.remove("active-tab");
+      document.getElementById("comment").classList.remove("active-tab");
+      var element = document.getElementById("settings");
+      element.classList.add("active-tab");
+
+      document.getElementById("chat__sidebar").style.display = "none";
+      document.getElementById("chat").style.display = "none";
+    }
+
+    document.getElementById("close").addEventListener("click", function() {
+      document.getElementById("main").style.width = "100%";
+      document.getElementById("sidebar").style.width = "0%";
+      document.getElementById("video-grid").style.marginRight = "90px";
+      document.getElementById("close").style.display = "none";
+      document.getElementById("open").style.display = "block";
+    })
+
+    document.getElementById("open").addEventListener("click", function() {
+      document.getElementById("main").style.width = "75%";
+      document.getElementById("sidebar").style.width = "25%";
+      document.getElementById("video-grid").style.marginRight = "10px";
+      document.getElementById("close").style.display = "block";
+      document.getElementById("open").style.display = "none";
+    })
+
+    
+    document.getElementById("muteButton").addEventListener("click", function() {
+      var micro = document.getElementById("mic");
+      if(micro.classList.contains("fa-microphone-slash"))
+      {
+        document.getElementById("mic").classList.remove("fa-microphone-slash");
+        document.getElementById("mic").classList.add("fa-microphone");
+        return;
+      }
+      else{
+        document.getElementById("mic").classList.remove("fa-microphone");
+        document.getElementById("mic").classList.add("fa-microphone-slash");
+        return;
+      }
+    })
+
+    document.getElementById("videoButton").addEventListener("click", function() {
+      var vid = document.getElementById("video");
+      if(vid.classList.contains("fa-video-slash"))
+      {
+        document.getElementById("video").classList.remove("fa-video-slash");
+        document.getElementById("video").classList.add("fa-video");
+        return;
+      }
+      else{
+        document.getElementById("video").classList.remove("fa-video");
+        document.getElementById("video").classList.add("fa-video-slash");
+        return;
+      }
+    })
+  </script>
 
   <script src="js/moment.js"></script>
   <script src="js/mustache.js"></script>
