share screen position changed

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -59,26 +59,27 @@
       transition: width 0.4s linear;
     }
 
-    #main #teacher-video {
+    #main .teacher-video {
       position: absolute;
       top: 36px;
-      width: 50%;
+      left: 2%;
+      width: 30%;
       height: 360px;
       z-index: 100;
       display: flex;
       justify-content: center;
     }
 
-    #main #teacher-video video {
-      width: 800px;
-      height: 480px;
+    #main .teacher-video video {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
 
     #main .share-screen {
       position: absolute;
       top: 36px;
-      right: 10px;
+      right: 5%;
       width: 50%;
       height: 360px;
     }
@@ -419,7 +420,7 @@
       </button></li>
     </ul>
 
-    <div id="teacher-video" ></div>
+    <div id="teacher-video" class="teacher-video"></div>
     <div id="video-grid" class="video-grid"></div>
     
   </div>
