Screen share fix

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -62,8 +62,7 @@
     #main .teacher-video {
       position: absolute;
       top: 36px;
-      left: 2%;
-      width: 30%;
+      width: 100%;
       height: 360px;
       z-index: 100;
       display: flex;
@@ -71,8 +70,8 @@
     }
 
     #main .teacher-video video {
-      width: 100%;
-      height: 100%;
+      width: 800px;
+      height: 480px;
       object-fit: cover;
     }
 
