--- a/views/room.ejs
+++ b/views/room.ejs
@@ -35,6 +35,7 @@
     .video-grid::-webkit-scrollbar-track
     {
       -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+      box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
       background-color: #F5F5F5;
       border-radius: 10px;
     }
