Screen Recording and Class Status Update

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -294,6 +294,12 @@
     width: 100%;
   }
 
+  .thirdtab-student {
+    display: none;
+    height: 92.5vh;
+    width: 100%;
+  }
+
   .thirdtab_content {
     width: 100%;
   }
