--- a/views/room.ejs
+++ b/views/room.ejs
@@ -18,9 +18,9 @@
   <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.922.0.min.js"></script>
   <script src="/socket.io/socket.io.js" defer></script>
-  <script src="config-s3.js"></script>
+  <!-- <script src="config-s3.js"></script> -->
   <script src="script.js" defer></script>
-  <title>Video Call and Chat App</title>
+  <title>The Right Guru - Live Class</title>
 </head>
 
 <body>
@@ -139,16 +139,16 @@
 
       <div id="thirdtab" class="thirdtab">
         <div class="message-header">
-          <h4 style="font-weight: 700;">Text</h4>
+          <h4 style="font-weight: 700;">Options</h4>
         </div>
         <div class="thirdtab_content">
-          // <select style="margin: 20px auto; width: 245px;" class="form-select">
-          //   <option selected value="Absent">Mark As Absent</option>
-          //   <option value="Completed">Mark Class As Completed</option>
-          // </select>
+          <!-- <select style="margin: 20px auto; width: 245px;" class="form-select">
+             <option selected value="Absent">Mark As Absent</option>
+             <option value="Completed">Mark Class As Completed</option>
+           </select> -->
 
           <div style="margin: auto; width: 80px;">
-            <button type="button" class="btn btn-danger mx-auto" onclick="updateClassStatus(Absent)">Mark as absent</button>
+            <button type="button" class="btn btn-danger mx-auto" onclick="updateClassStatus('Absent')">Mark as absent</button>
           </div>
           
           <div style="margin: auto; width: 80px;">
@@ -196,6 +196,7 @@
       element.classList.add("active-tab");
 
       document.getElementById("thirdtab").style.display = "none";
+      document.getElementById("thirdtab-student").style.display = "none";
       document.getElementById("chat__sidebar").style.display = "none";
       document.getElementById("chat").style.display = "block";
       on_message_tab = true;
@@ -211,6 +212,7 @@
       document.getElementById("chat__sidebar").style.display = "block";
       document.getElementById("chat").style.display = "none";
       document.getElementById("thirdtab").style.display = "none";
+      document.getElementById("thirdtab-student").style.display = "none";
       on_message_tab = false;
     }
 
