--- a/views/room.ejs
+++ b/views/room.ejs
@@ -18,7 +18,7 @@
   <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.922.0.min.js"></script>
   <script src="/socket.io/socket.io.js" defer></script>
-  <!-- <script src="config-s3.js"></script> -->
+  <script src="config-s3.js"></script>
   <script src="script.js" defer></script>
   <title>The Right Guru - Live Class</title>
 </head>
