--- a/views/room.ejs
+++ b/views/room.ejs
@@ -15,7 +15,7 @@
     const ROOM_ID = "<%= data.roomId %>"
     const JOINED_USER = "<%= data.joinedUser %>"
   </script>
-  <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+  <script defer src="peerjs.min.js"></script>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.922.0.min.js"></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="config-s3.js"></script>
