Remove Absent Button

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -147,9 +147,9 @@
              <option value="Completed">Mark Class As Completed</option>
            </select> -->
 
-          <div style="margin: auto; width: 80px;">
+          <!-- <div style="margin: auto; width: 80px;">
             <button type="button" class="btn btn-danger mx-auto" onclick="updateClassStatus('Absent')">Mark as absent</button>
-          </div>
+          </div> -->
           
           <div style="margin: auto; width: 80px;">
             <button type="button" class="btn btn-danger mx-auto" onclick="updateClassStatus('Completed')">Mark Class as Completed</button>
