mobile view test2 - remove scroll bar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@
     height: 100%;
     width: 100%;
     position: relative;
-    overflow: auto;
+    overflow: hidden;
   }
 
   .video-grid::-webkit-scrollbar-track
