--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
   }
 
   html, body {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     overflow: hidden;
     position: fixed;
@@ -16,7 +16,7 @@
   }
 
   .site-wrapper {
-    height: 100%;
+    height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     width: 100%;
     position: relative;
@@ -89,8 +89,8 @@
   }
   
   #main .video-grid video {
-    width: 150px;
-    height: 110px;
+    width: 180px;
+    height: 120px;
     object-fit: cover;
     margin-right: 30px;
   }
@@ -516,8 +516,8 @@
     }
       
     #main .video-grid video {
-      width: 120px;
-      height: 90px;
+      width: 140px;
+      height: 100px;
       margin-right: 25px;
     }
 
